fixed horizontal scroll on hero section and blog section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,10 +62,6 @@
 
 
 /* Blog Section */
-.container {
-    width: 100%;
-}
-
 .blog {
     margin-top: 40px;
     /* background-color: hotpink; */
@@ -201,6 +197,10 @@ a {
 
     .wrapper .content {
         padding: 6px;
+    }
+
+    body {
+        overflow-x: hidden;
     }
 
 }
